--- a/public/front/login.ejs
+++ b/public/front/login.ejs
@@ -53,5 +53,15 @@
     <p>New around?</p>
     <a href="/register">Register</a>
 </div>
+<div class="col-sm-4">
+    <div class="card">
+        <div class="card-body">
+            <a class="btn btn-block" href="/auth/google" role="button">
+                <i class="fab fa-google"></i>
+                Sign In with Google
+            </a>
+        </div>
+    </div>
+</div>
 </body>
 </html>
