--- a/public/html_files/edit.ejs
+++ b/public/html_files/edit.ejs
@@ -32,25 +32,26 @@
                     <h1 class="m-3 pt-3">Edit Profile</h1>
                     <form action="/profile/edit" class="needs-validation" method="POST">
                         <div class="row g-3">
-<!--                            <div class="col-sm-6">-->
-<!--                                <label for="email" class="form-label">New Email</label>-->
-<!--                                <input type="text" class="form-control" name="email" id="email" placeholder="" value=""-->
-<!--                                       required>-->
-<!--                                <div class="invalid-feedback">-->
-<!--                                    Valid email is required.-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                            <div class="col-sm-6">-->
-<!--                                <label for="username" class="form-label">New Username</label>-->
-<!--                                <input type="text" class="form-control" name="username" id="username" placeholder="" value=""-->
-<!--                                       required>-->
-<!--                                <div class="invalid-feedback">-->
-<!--                                    Valid username is required.-->
-<!--                                </div>-->
-<!--                            </div>-->
+                            <!--                            <div class="col-sm-6">-->
+                            <!--                                <label for="email" class="form-label">New Email</label>-->
+                            <!--                                <input type="text" class="form-control" name="email" id="email" placeholder="" value=""-->
+                            <!--                                       required>-->
+                            <!--                                <div class="invalid-feedback">-->
+                            <!--                                    Valid email is required.-->
+                            <!--                                </div>-->
+                            <!--                            </div>-->
+                            <!--                            <div class="col-sm-6">-->
+                            <!--                                <label for="username" class="form-label">New Username</label>-->
+                            <!--                                <input type="text" class="form-control" name="username" id="username" placeholder="" value=""-->
+                            <!--                                       required>-->
+                            <!--                                <div class="invalid-feedback">-->
+                            <!--                                    Valid username is required.-->
+                            <!--                                </div>-->
+                            <!--                            </div>-->
                             <div class="col-sm-6">
                                 <label for="phone" class="form-label">New Phone</label>
-                                <input type="number" class="form-control" name="phone" id="phone" placeholder="" value=""
+                                <input type="number" class="form-control" name="phone" id="phone" placeholder=""
+                                       value=""
                                        required>
                                 <div class="invalid-feedback">
                                     Valid phone is required.
@@ -66,44 +67,26 @@
                             </div>
                             <div class="col-sm-6">
                                 <label for="postIndex" class="form-label">New Post Index</label>
-                                <input type="number" class="form-control" name="postIndex" id="postIndex" placeholder="" value=""
+                                <input type="number" class="form-control" name="postIndex" id="postIndex" placeholder=""
+                                       value=""
                                        required>
                                 <div class="invalid-feedback">
                                     Valid phone is required.
                                 </div>
-<!--                            </div>-->
-<!--                            <div class="col-sm-6">-->
-<!--                                <label for="password" class="form-label">New Password</label>-->
-<!--                                <input type="password" class="form-control" name="password" id="password" placeholder=""-->
-<!--                                       value="" required>-->
-<!--                                <div class="invalid-feedback">-->
-<!--                                    Valid password is required.-->
-<!--                                </div>-->
-<!--                            </div>-->
+                                <!--                            </div>-->
+                                <!--                            <div class="col-sm-6">-->
+                                <!--                                <label for="password" class="form-label">New Password</label>-->
+                                <!--                                <input type="password" class="form-control" name="password" id="password" placeholder=""-->
+                                <!--                                       value="" required>-->
+                                <!--                                <div class="invalid-feedback">-->
+                                <!--                                    Valid password is required.-->
+                                <!--                                </div>-->
+                                <!--                            </div>-->
+                            </div>
+                            <br><br><br><br><br><br><br>
+                            <button class="w-100 btn btn-primary btn-lg" type="submit">Update</button>
                         </div>
-                        <br>
-                        <button class="w-100 btn btn-primary btn-lg" type="submit">Update</button>
                     </form>
-                </div>
-                <div class="card mb-3 content">
-                    <h1 class="m-3">Order history</h1>
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-3">
-                                <h5>T-Shirt</h5>
-                            </div>
-
-                            <div class="col-md-9 text-secondary">14.10$</div>
-                        </div>
-                        <hr>
-                        <div class="row">
-                            <div class="col-md-3">
-                                <h5>Pants</h5>
-                            </div>
-
-                            <div class="col-md-9 text-secondary">20.00$</div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
