--- a/public/front/register.ejs
+++ b/public/front/register.ejs
@@ -69,5 +69,15 @@
     <p>Have an account?</p>
     <a href="/login">Login</a>
 </div>
+<div class="col-sm-4">
+    <div class="card social-block">
+        <div class="card-body">
+            <a class="btn btn-block" href="/auth/google" role="button">
+                <i class="fab fa-google"></i>
+                Sign Up with Google
+            </a>
+        </div>
+    </div>
+</div>
 </body>
 </html>
